--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "description": "",
   "main": "server.js",
+
+  "engines": {
+    "node": "14.x"
+  },
+  
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^0.21.1",
