--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "server.js",
 
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "7.x"
   },
-  
+
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^0.21.1",
